<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5722"
    tools:context=".MainActivity3">

  <TextView
      android:id="@+id/titleActivity2"
      android:layout_width="182dp"
      android:layout_height="53dp"
      android:layout_marginStart="112dp"
      android:layout_marginTop="33dp"
      android:layout_marginBottom="52dp"
      android:text="@string/titleActivity3"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="italic"
      app:layout_constraintBottom_toTopOf="@+id/selectMonnaieToModify"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Spinner
      android:id="@+id/selectMonnaieToModify"
      android:layout_width="143dp"
      android:layout_height="44dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="52dp"
      android:layout_marginEnd="26dp"
      android:entries="@array/SelectMoney"
      android:spinnerMode="dropdown"
      android:textAlignment="center"
      app:layout_constraintEnd_toStartOf="@+id/newTaux"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/titleActivity2" />

  <EditText
      android:id="@+id/newTaux"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:layout_marginStart="26dp"
      android:layout_marginTop="52dp"
      android:layout_marginBottom="53dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:minHeight="48dp"
      android:text="@string/newTaux"
      android:textAlignment="center"
      android:textColor="@color/black"
      app:layout_constraintBottom_toTopOf="@+id/buttonModificationTaux"
      app:layout_constraintStart_toEndOf="@+id/selectMonnaieToModify"
      app:layout_constraintTop_toBottomOf="@+id/titleActivity2"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/buttonModificationTaux"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="164dp"
      android:layout_marginBottom="12dp"
      android:backgroundTint="@color/purple_200"
      android:text="@string/buttonModificationTaux"
      android:textColor="@color/white"
      app:iconTint="#E91E63"
      app:layout_constraintBottom_toTopOf="@+id/listViewDevises"
      app:layout_constraintEnd_toEndOf="parent"
      app:strokeColor="#009688" />

  <ListView
      android:id="@+id/listViewDevises"
      android:layout_width="344dp"
      android:layout_height="249dp"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="32dp"
      android:entries="@array/SelectMoney"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonModificationTaux" />
</androidx.constraintlayout.widget.ConstraintLayout>